--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: clutter master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=clutter&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2013-12-18 14:40+0000\n"
+"POT-Creation-Date: 2014-01-17 12:11+0000\n"
 "PO-Revision-Date: 2013-12-25 00:25+0800\n"
 "Last-Translator: Sphinx Jiang <yishanj13@gmail.com>\n"
 "Language-Team: Chinese Simplified <i18n-zh@googlegroups.com>\n"
@@ -1131,17 +1131,14 @@ msgid "Left attachment"
 msgstr "左侧附加"
 
 #: ../clutter/clutter-grid-layout.c:1224
-#, fuzzy
 msgid "The column number to attach the left side of the child to"
 msgstr "将子角色的左侧附加到第几列"
 
 #: ../clutter/clutter-grid-layout.c:1231
-#, fuzzy
 msgid "Top attachment"
 msgstr "顶部附加"
 
 #: ../clutter/clutter-grid-layout.c:1232
-#, fuzzy
 msgid "The row number to attach the top side of a child widget to"
 msgstr "将子角色的顶部附加到第几行"
 
@@ -1366,18 +1363,16 @@ msgid "Deceleration"
 msgstr "减速"
 
 #: ../clutter/clutter-pan-action.c:478
-#, fuzzy
 msgid "Rate at which the interpolated panning will decelerate in"
-msgstr "插入的平移的减速比率"
+msgstr "插入的平移(interpolated panning)的减速比率"
 
 #: ../clutter/clutter-pan-action.c:495
 msgid "Initial acceleration factor"
 msgstr "初始加速系数"
 
 #: ../clutter/clutter-pan-action.c:496
-#, fuzzy
 msgid "Factor applied to the momentum when starting the interpolated phase"
-msgstr "开始相位插入时应用于初速的加速系数"
+msgstr "开始插入相位(interpolated phase)时应用于初速(momentum)的加速系数"
 
 #: ../clutter/clutter-path-constraint.c:212
 #: ../clutter/deprecated/clutter-behaviour-path.c:221
@@ -2487,12 +2482,11 @@ msgstr ""
 
 #: ../clutter/deprecated/clutter-texture.c:1010
 msgid "Tile Waste"
-msgstr ""
+msgstr "图块冗余(Waste)"
 
 #: ../clutter/deprecated/clutter-texture.c:1011
-#, fuzzy
 msgid "Maximum waste area of a sliced texture"
-msgstr "切分纹理的最大留白空间"
+msgstr "切割纹理的最大冗余区(waste area)"
 
 #: ../clutter/deprecated/clutter-texture.c:1019
 msgid "Horizontal repeat"
